button bug on mobile is done

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,7 @@
 
 }
 
-html {
-  height: -webkit-fill-available;
-}
+
 
 body {
 	font-family: 'geomanistregular';
